[gd_scene load_steps=28 format=3 uid="uid://byfjk376rtjum"]

[ext_resource type="Script" path="res://scripts/nodes/game_manager.gd" id="1_l43p6"]
[ext_resource type="Script" path="res://scripts/nodes/camera_2d.gd" id="3_hkdu8"]
[ext_resource type="Script" path="res://scripts/nodes/map_drawer.gd" id="5_6uqvh"]
[ext_resource type="Script" path="res://scripts/control/control_main.gd" id="5_c3t0l"]
[ext_resource type="Texture2D" uid="uid://dmkbp4txtjs5j" path="res://sprites/coin_sprite.tres" id="6_52e18"]
[ext_resource type="PackedScene" uid="uid://l13dk6opal54" path="res://scenes/control/upgrade_option_button.tscn" id="6_wrk1s"]
[ext_resource type="Script" path="res://scripts/control/control_in_game.gd" id="7_j5a5t"]
[ext_resource type="AudioStream" uid="uid://biyrj4fsaybv4" path="res://sound_effects/mob_hit.wav" id="7_nb2t7"]
[ext_resource type="Script" path="res://scripts/nodes/mob_spawner.gd" id="7_nfp22"]
[ext_resource type="Script" path="res://scripts/nodes/pathfinding.gd" id="8_af664"]
[ext_resource type="Texture2D" uid="uid://dnlrtp3aweov4" path="res://sprites/control/under.tres" id="8_arwt7"]
[ext_resource type="Script" path="res://scripts/nodes/cell_inspector.gd" id="8_m46x2"]
[ext_resource type="Texture2D" uid="uid://b2p2u10fovw7" path="res://sprites/hourglass.tres" id="9_6bjfq"]
[ext_resource type="Texture2D" uid="uid://drmcwklq3qfee" path="res://sprites/control/over.tres" id="9_su02w"]
[ext_resource type="Script" path="res://scripts/control/control_debug.gd" id="9_vxhso"]
[ext_resource type="Texture2D" uid="uid://bs5m7yp8hqm1" path="res://sprites/control/progress.tres" id="10_0yt8x"]
[ext_resource type="Script" path="res://scripts/control/control_game_over.gd" id="10_1em41"]
[ext_resource type="PackedScene" uid="uid://ck16naxw6rn0d" path="res://scenes/spawn_point.tscn" id="10_ao74v"]
[ext_resource type="Script" path="res://scripts/control/control_upgrade_options.gd" id="12_b3rp4"]
[ext_resource type="Script" path="res://scripts/nodes/tower_spawner.gd" id="15_3y22w"]
[ext_resource type="Texture2D" uid="uid://wefb8xe38by7" path="res://sprites/placeholder_sprites.png" id="15_62lxk"]
[ext_resource type="ButtonGroup" uid="uid://bam2t2nbxoj6t" path="res://button_group_game_speed.tres" id="21_5fiwn"]
[ext_resource type="Script" path="res://scripts/nodes/special_effects.gd" id="23_aqxf2"]
[ext_resource type="PackedScene" uid="uid://cck72le1by1qn" path="res://scenes/floating_text.tscn" id="24_27evh"]
[ext_resource type="Script" path="res://scripts/control/control_pause.gd" id="24_ri8gj"]
[ext_resource type="Script" path="res://scripts/nodes/sound_effects_player.gd" id="25_6tpgp"]
[ext_resource type="AudioStream" uid="uid://pgh3b0kbrcqc" path="res://sound_effects/mob_die.wav" id="25_42f42"]

[node name="Game" type="Node" node_paths=PackedStringArray("map_drawer", "mob_spawner", "tower_spawner", "pathfinding_manager", "cell_inspector", "special_effects", "sound_effects_player", "main_control", "control_in_game", "control_debug", "control_pause")]
script = ExtResource("1_l43p6")
map_drawer = NodePath("MapObjects/MapDrawer")
mob_spawner = NodePath("MapObjects/MobSpawner")
tower_spawner = NodePath("MapObjects/TowerSpawner")
pathfinding_manager = NodePath("PathfindingManager")
cell_inspector = NodePath("CellInspector")
special_effects = NodePath("SpecialEffects")
sound_effects_player = NodePath("SoundEffectsPlayer")
main_control = NodePath("CanvasLayer/ControlMain")
control_in_game = NodePath("CanvasLayer/ControlMain/ControlInGame")
control_debug = NodePath("CanvasLayer/ControlMain/ControlDebug")
control_pause = NodePath("CanvasLayer/ControlMain/ControlPause")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
script = ExtResource("3_hkdu8")
speed = 500

[node name="PathfindingManager" type="Node2D" parent="."]
script = ExtResource("8_af664")

[node name="MobPathLinesContainer" type="Node2D" parent="PathfindingManager"]

[node name="Line2D" type="Line2D" parent="PathfindingManager/MobPathLinesContainer"]
width = 4.0

[node name="MapObjects" type="Node2D" parent="."]
y_sort_enabled = true

[node name="MobSpawner" type="Node2D" parent="MapObjects"]
y_sort_enabled = true
script = ExtResource("7_nfp22")
spawn_point_scene = ExtResource("10_ao74v")
mob_killed_sfx = ExtResource("25_42f42")
mob_hit_sfx = ExtResource("7_nb2t7")

[node name="TowerSpawner" type="Node2D" parent="MapObjects"]
y_sort_enabled = true
script = ExtResource("15_3y22w")

[node name="MapDrawer" type="Node2D" parent="MapObjects"]
z_index = -1
script = ExtResource("5_6uqvh")

[node name="CellInspector" type="Node2D" parent="."]
script = ExtResource("8_m46x2")

[node name="CellMarkerSprite" type="Sprite2D" parent="CellInspector"]
unique_name_in_owner = true
z_index = 1
texture = ExtResource("15_62lxk")
region_enabled = true
region_rect = Rect2(32, 16, 16, 16)

[node name="SpecialEffects" type="Node2D" parent="."]
script = ExtResource("23_aqxf2")
floating_text_scene = ExtResource("24_27evh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ControlMain" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("game_manager", "start_game_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_c3t0l")
game_manager = NodePath("../..")
start_game_button = NodePath("ControlPreGame/Button")

[node name="ControlPreGame" type="Control" parent="CanvasLayer/ControlMain"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/ControlMain/ControlPreGame"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 31.0
text = "Start Game"

[node name="ControlInGame" type="Control" parent="CanvasLayer/ControlMain"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_j5a5t")

[node name="TowerHealthBar" type="TextureProgressBar" parent="CanvasLayer/ControlMain/ControlInGame"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 20.0
grow_horizontal = 2
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
texture_under = ExtResource("8_arwt7")
texture_over = ExtResource("9_su02w")
texture_progress = ExtResource("10_0yt8x")

[node name="PanelGold" type="Panel" parent="CanvasLayer/ControlMain/ControlInGame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 64.0
offset_right = 192.0
offset_bottom = 20.0
grow_horizontal = 2

[node name="GoldSprite" type="TextureRect" parent="CanvasLayer/ControlMain/ControlInGame/PanelGold"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = 8.0
grow_vertical = 2
texture = ExtResource("6_52e18")

[node name="GoldText" type="Label" parent="CanvasLayer/ControlMain/ControlInGame/PanelGold"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "Gold"
vertical_alignment = 1

[node name="PanelTime" type="Panel" parent="CanvasLayer/ControlMain/ControlInGame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 192.0
offset_right = 320.0
offset_bottom = 20.0
grow_horizontal = 2

[node name="HourglassSprite" type="TextureRect" parent="CanvasLayer/ControlMain/ControlInGame/PanelTime"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = 8.0
grow_vertical = 2
texture = ExtResource("9_6bjfq")

[node name="TimeText" type="Label" parent="CanvasLayer/ControlMain/ControlInGame/PanelTime"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "Time"
vertical_alignment = 1

[node name="ControlUpgradeOptions" type="Control" parent="CanvasLayer/ControlMain/ControlInGame"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("12_b3rp4")
upgrade_option_button = ExtResource("6_wrk1s")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/ControlMain/ControlInGame/ControlUpgradeOptions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ControlMain/ControlInGame/ControlUpgradeOptions/PanelContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/ControlMain/ControlInGame/ControlUpgradeOptions/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ControlMain/ControlInGame/ControlUpgradeOptions/PanelContainer/VBoxContainer/Control"]
layout_mode = 1
offset_right = 124.0
offset_bottom = 26.0
text = "Pick an upgrade"

[node name="RerollUpgradesButton" type="Button" parent="CanvasLayer/ControlMain/ControlInGame/ControlUpgradeOptions/PanelContainer/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Reroll
"

[node name="UpgradeOptionsContainer" type="HBoxContainer" parent="CanvasLayer/ControlMain/ControlInGame/ControlUpgradeOptions/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="GameSpeedControls" type="PanelContainer" parent="CanvasLayer/ControlMain/ControlInGame"]
layout_mode = 0
offset_right = 97.0
offset_bottom = 136.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ControlMain/ControlInGame/GameSpeedControls"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ControlMain/ControlInGame/GameSpeedControls/VBoxContainer"]
layout_mode = 2
text = "Game Speed"

[node name="CheckBoxGameSpeed01" type="CheckBox" parent="CanvasLayer/ControlMain/ControlInGame/GameSpeedControls/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_pressed = true
button_group = ExtResource("21_5fiwn")
text = "x1"

[node name="CheckBoxGameSpeed02" type="CheckBox" parent="CanvasLayer/ControlMain/ControlInGame/GameSpeedControls/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_group = ExtResource("21_5fiwn")
text = "x2"

[node name="CheckBoxGameSpeed05" type="CheckBox" parent="CanvasLayer/ControlMain/ControlInGame/GameSpeedControls/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_group = ExtResource("21_5fiwn")
text = "x5"

[node name="CheckBoxGameSpeed10" type="CheckBox" parent="CanvasLayer/ControlMain/ControlInGame/GameSpeedControls/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_group = ExtResource("21_5fiwn")
text = "x10"

[node name="ControlDebug" type="Control" parent="CanvasLayer/ControlMain" node_paths=PackedStringArray("check_box_draw_range_indicators", "check_box_draw_pathfinding_grid", "check_box_draw_mob_paths", "check_box_show_damage_numbers")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_vxhso")
check_box_draw_range_indicators = NodePath("DebugTogglesContainer/CheckBoxDrawRangeIndicators")
check_box_draw_pathfinding_grid = NodePath("DebugTogglesContainer/CheckBoxDrawPathfindingGrid")
check_box_draw_mob_paths = NodePath("DebugTogglesContainer/CheckBoxDrawMobPaths")
check_box_show_damage_numbers = NodePath("DebugTogglesContainer/CheckBoxShowDamageNumbers")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/ControlMain/ControlDebug"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -215.0
offset_right = 384.0
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ControlMain/ControlDebug/PanelContainer"]
layout_mode = 2

[node name="GameEventsText" type="Label" parent="CanvasLayer/ControlMain/ControlDebug/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Debug Text
And Some More"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ControlMain/ControlDebug"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="RestartGameButton" type="Button" parent="CanvasLayer/ControlMain/ControlDebug/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "[DEBUG] Restart"
alignment = 0

[node name="DamageTowerButton" type="Button" parent="CanvasLayer/ControlMain/ControlDebug/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "[DEBUG] Damage Tower"
alignment = 0

[node name="KillTowerButton" type="Button" parent="CanvasLayer/ControlMain/ControlDebug/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "[DEBUG] Kill Tower"
alignment = 0

[node name="DebugTogglesContainer" type="VBoxContainer" parent="CanvasLayer/ControlMain/ControlDebug"]
layout_mode = 0
offset_top = 32.0
offset_right = 214.0
offset_bottom = 168.0

[node name="CheckBoxDrawRangeIndicators" type="CheckBox" parent="CanvasLayer/ControlMain/ControlDebug/DebugTogglesContainer"]
layout_mode = 2
text = "Draw Range Indicators"

[node name="CheckBoxDrawPathfindingGrid" type="CheckBox" parent="CanvasLayer/ControlMain/ControlDebug/DebugTogglesContainer"]
layout_mode = 2
text = "Draw Pathfinding Grid"

[node name="CheckBoxDrawMobPaths" type="CheckBox" parent="CanvasLayer/ControlMain/ControlDebug/DebugTogglesContainer"]
layout_mode = 2
text = "Draw Mob Paths"

[node name="CheckBoxShowDamageNumbers" type="CheckBox" parent="CanvasLayer/ControlMain/ControlDebug/DebugTogglesContainer"]
layout_mode = 2
text = "Show Damage Numbers"

[node name="ControlGameOver" type="Control" parent="CanvasLayer/ControlMain"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_1em41")

[node name="Panel" type="Panel" parent="CanvasLayer/ControlMain/ControlGameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/ControlMain/ControlGameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -13.0
offset_right = 46.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="CanvasLayer/ControlMain/ControlGameOver"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.5
offset_top = -191.0
offset_right = 32.5
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="ControlPause" type="Control" parent="CanvasLayer/ControlMain" node_paths=PackedStringArray("continue_button", "restart_button", "quit_button")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("24_ri8gj")
continue_button = NodePath("VBoxContainer/ContinueButton")
restart_button = NodePath("VBoxContainer/RestartButton")
quit_button = NodePath("VBoxContainer/QuitButton")

[node name="Panel" type="Panel" parent="CanvasLayer/ControlMain/ControlPause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/ControlMain/ControlPause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -13.0
offset_right = 46.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ControlMain/ControlPause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = 141.5
offset_right = 39.5
offset_bottom = 242.5
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="CanvasLayer/ControlMain/ControlPause/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Continue"

[node name="RestartButton" type="Button" parent="CanvasLayer/ControlMain/ControlPause/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Restart"

[node name="QuitButton" type="Button" parent="CanvasLayer/ControlMain/ControlPause/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="SoundEffectsPlayer" type="Node" parent="." node_paths=PackedStringArray("audio_stream_players")]
script = ExtResource("25_6tpgp")
audio_stream_players = [NodePath("AudioStreamPlayer"), NodePath("AudioStreamPlayer2"), NodePath("AudioStreamPlayer3")]
mob_killed_sfx = ExtResource("25_42f42")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SoundEffectsPlayer"]
unique_name_in_owner = true
stream = ExtResource("25_42f42")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="SoundEffectsPlayer"]
unique_name_in_owner = true
stream = ExtResource("25_42f42")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="SoundEffectsPlayer"]
unique_name_in_owner = true
stream = ExtResource("25_42f42")
